# Agent_System

./: .env  AGENTS.md  Main Agent_todo_list.md  README.md  agentVariant.py  autotrader_emails.md  autotrader_emails.py  autotrader_emails_v2.py  client.py  gemini_helper.py  get_arsenal_pos.py  get_spurs_pos.py  loop.py  loopVariant.py  mcp.json  mcpClient.py  requirements.txt  supabase_helpers.py  tottenham_25_26_finish.md  tottenham_25_26_position.md  tottenham_position.md
SKILLS/WEB_RESEARCH/: skill.md
agent/: pyvenv.cfg
agent/Scripts/: activate  activate.bat  google
mcpServer/: client_secret_648740632845-52e6g769krpabkj1as56c7o5ik2koblt.apps.googleusercontent.com.json  get_google_auth.py  mcp_test.py  requirements.txt  server.py  token.json
mcpServer/gmail/: pyvenv.cfg
mcpServer/gmail/Scripts/: activate  activate.bat
originalAgentSystem/: pyproject.toml
originalAgentSystem/src/: __init__.py  agent.py
originalAgentSystem/src/artist_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web-app/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
web-app/components/: modal.jsx
web-app/frontendTools/: tools.js
web-app/src/: App.jsx  index.css
