[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "artist-tools"
version = "0.1.0"
description = "Audience analytics tools for music data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["websockets", "dotenv", "pydantic", "firecrawl", "google", "google.genai", "ollama", "mcp"]

authors = [
  {name = "Baon"}
]
